// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST tests block-in-blockquote.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "  a {
   color: red;
  }
",
      "file": "/block-in-blockquote.md",
      "hasBOM": false,
    },
    Object {
      "css": "    a {
      color: red;
    }
",
      "file": "/block-in-blockquote.md",
      "hasBOM": false,
    },
    Object {
      "css": "  a {
    color: red;
  }
",
      "file": "/block-in-blockquote.md",
      "hasBOM": false,
    },
    Object {
      "css": "    a {

      color: red;

      }
",
      "file": "/block-in-blockquote.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

## Blockquote

> \`\`\`css
> a {
>  color: red;
> }
> \`\`\`

## Nesting Blockquote

> > \`\`\`css
> > a {
> >   color: red;
> > }
> > \`\`\`

## Blockquote With HTML

> \`\`\`html
> <style>
> a {
>   color: red;
> }
> </style>
> \`\`\`

## Blockquote With Blank

> > \`\`\`css
> > a {
> > 
> >   color: red;
> >
> >   }
> > \`\`\`
",
      "file": "/block-in-blockquote.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
   ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 14,
                  "line": 7,
                  "offset": 53,
                },
                "inputId": 0,
                "start": Object {
                  "column": 4,
                  "line": 7,
                  "offset": 43,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 8,
              "offset": 57,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 6,
              "offset": 36,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "# Header

## Blockquote

> \`\`\`css
",
        "mdBlockquoteMarker": Object {
          "base": "> ",
          "markers": Array [
            "> ",
            "> ",
            "> ",
            "",
          ],
        },
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 34,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
      ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 17,
                  "line": 15,
                  "offset": 124,
                },
                "inputId": 0,
                "start": Object {
                  "column": 7,
                  "line": 15,
                  "offset": 114,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
    ",
            "before": "    ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 5,
              "line": 16,
              "offset": 130,
            },
            "inputId": 0,
            "start": Object {
              "column": 5,
              "line": 14,
              "offset": 104,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "> \`\`\`

## Nesting Blockquote

> > \`\`\`css
",
        "mdBlockquoteMarker": Object {
          "base": "> > ",
          "markers": Array [
            "> > ",
            "> > ",
            "> > ",
            "",
          ],
        },
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 14,
          "offset": 100,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
    ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 15,
                  "line": 24,
                  "offset": 206,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 24,
                  "offset": 196,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 25,
              "offset": 210,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 23,
              "offset": 188,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "> > \`\`\`

## Blockquote With HTML

> \`\`\`html
> <style>
",
        "mdBlockquoteMarker": Object {
          "base": "> ",
          "markers": Array [
            "> ",
            "> ",
            "> ",
            "> ",
            "> ",
            "",
          ],
        },
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 23,
          "offset": 186,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "

      ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 17,
                  "line": 34,
                  "offset": 296,
                },
                "inputId": 0,
                "start": Object {
                  "column": 7,
                  "line": 34,
                  "offset": 286,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "

      ",
            "before": "    ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 7,
              "line": 36,
              "offset": 308,
            },
            "inputId": 0,
            "start": Object {
              "column": 5,
              "line": 32,
              "offset": 271,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "> > \`\`\`
",
        "codeBefore": "> </style>
> \`\`\`

## Blockquote With Blank

> > \`\`\`css
",
        "mdBlockquoteMarker": Object {
          "base": "> > ",
          "markers": Array [
            "> > ",
            "> > ",
            "> > ",
            "> >",
            "> > ",
            "",
          ],
        },
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 32,
          "offset": 267,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests html-in-md.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
color: red;
}
",
      "file": "/html-in-md.md",
      "hasBOM": false,
    },
    Object {
      "css": ".b {
color: red;
}
",
      "file": "/html-in-md.md",
      "hasBOM": false,
    },
    Object {
      "css": ".c {
color: red;
}
",
      "file": "/html-in-md.md",
      "hasBOM": false,
    },
    Object {
      "css": ".d {}",
      "file": "/html-in-md.md",
      "hasBOM": false,
    },
    Object {
      "css": "<div>

<div>


<style>
a {
color: red;
}
</style>

<style>
.b {
color: red;
}
</style>

</div>

<style>
.c {
color: red;
}
</style>

</div>

<style>.d {} </style>
",
      "file": "/html-in-md.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 11,
                  "line": 8,
                  "offset": 37,
                },
                "inputId": 0,
                "start": Object {
                  "column": 1,
                  "line": 8,
                  "offset": 27,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 9,
              "offset": 39,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 23,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "<div>

<div>


<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 7,
          "offset": 23,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 11,
                  "line": 14,
                  "offset": 74,
                },
                "inputId": 0,
                "start": Object {
                  "column": 1,
                  "line": 14,
                  "offset": 64,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 15,
              "offset": 76,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 13,
              "offset": 59,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "</style>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 13,
          "offset": 59,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 11,
                  "line": 22,
                  "offset": 119,
                },
                "inputId": 0,
                "start": Object {
                  "column": 1,
                  "line": 22,
                  "offset": 109,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".c",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 23,
              "offset": 121,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 104,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "</style>

</div>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 21,
          "offset": 104,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [],
          "raws": Object {
            "after": "",
            "before": "",
            "between": " ",
          },
          "selector": ".d",
          "source": Object {
            "end": Object {
              "column": 12,
              "line": 28,
              "offset": 152,
            },
            "inputId": 0,
            "start": Object {
              "column": 8,
              "line": 28,
              "offset": 148,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "",
        "codeAfter": " </style>
",
        "codeBefore": "</style>

</div>

<style>",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 8,
          "line": 28,
          "offset": 148,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests ignore-comment.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": ".b {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": ".f {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": ".h {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "  .i {
    color: red;
  }
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

<!--postcss-ignore-->

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`css
.b {
  color: red;
}
\`\`\`

<!-- postcss-ignore -->
\`\`\`css
.c {
  color: red;
}
\`\`\`

<!--   postcss-ignore   -->




\`\`\`css
.d {
  color: red;
}
\`\`\`

<!--postcss-ignore-->

<style>
.e {
  color: red;
}
</style>

\`\`\`html
<style>
.f {
  color: red;
}
</style>
\`\`\`

<!--postcss-ignore-->
<!--postcss-ignore-->

<style>
.g {
  color: red;
}
</style>

<style>
.h {
  color: red;
}
</style>

<!--postcss-ignore-->

<div>
  <style>
  .i {
    color: red;
  }
  </style>
</div>
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 13,
                  "offset": 89,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 13,
                  "offset": 79,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 14,
              "offset": 91,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 72,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "# Header

<!--postcss-ignore-->

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 12,
          "offset": 72,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 46,
                  "offset": 315,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 46,
                  "offset": 305,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".f",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 47,
              "offset": 317,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 45,
              "offset": 298,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "\`\`\`

<!-- postcss-ignore -->
\`\`\`css
.c {
  color: red;
}
\`\`\`

<!--   postcss-ignore   -->




\`\`\`css
.d {
  color: red;
}
\`\`\`

<!--postcss-ignore-->

<style>
.e {
  color: red;
}
</style>

\`\`\`html
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 45,
          "offset": 298,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 62,
                  "offset": 442,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 62,
                  "offset": 432,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".h",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 63,
              "offset": 444,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 61,
              "offset": 425,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "</style>
\`\`\`

<!--postcss-ignore-->
<!--postcss-ignore-->

<style>
.g {
  color: red;
}
</style>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 61,
          "offset": 425,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
    ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 15,
                  "line": 71,
                  "offset": 516,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 71,
                  "offset": 506,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".i",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 72,
              "offset": 520,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 70,
              "offset": 497,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "  </style>
</div>
",
        "codeBefore": "</style>

<!--postcss-ignore-->

<div>
  <style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 70,
          "offset": 495,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests nest.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "  a {
    color: red;
  }
",
      "file": "/nest.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

- CSS

  \`\`\`css
  a {
    color: red;
  }
  \`\`\`
",
      "file": "/nest.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
    ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 15,
                  "line": 7,
                  "offset": 46,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 7,
                  "offset": 36,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 8,
              "offset": 50,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 6,
              "offset": 28,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "  \`\`\`
",
        "codeBefore": "# Header

- CSS

  \`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 26,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests no-effect-ignore-comment.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/no-effect-ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

<!--postcss-ignore-->

- foo

\`\`\`css
a {
  color: red;
}
\`\`\`
",
      "file": "/no-effect-ignore-comment.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 9,
                  "offset": 63,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 9,
                  "offset": 53,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 65,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 47,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "\`\`\`
",
        "codeBefore": "# Header

<!--postcss-ignore-->

- foo

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 47,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`scss
a {
  color: red;
}
// comment
.b {
  color: red;
}
\`\`\`

\`\`\`html
<style>
a {
  color: red;
}
</style>
\`\`\`

<style>
a {
  color: red;
}
</style>

\`\`\`
block
\`\`\`
",
      "file": "/test.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 5,
                  "offset": 33,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 23,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 35,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 17,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "# Header

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 17,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 11,
                  "offset": 66,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 11,
                  "offset": 56,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 68,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 50,
            },
          },
          "type": "rule",
        },
        Object {
          "raws": Object {
            "before": "
",
            "inline": true,
            "left": " ",
            "right": "",
            "text": "comment",
          },
          "source": Object {
            "end": Object {
              "column": 10,
              "line": 13,
              "offset": 79,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 13,
              "offset": 70,
            },
          },
          "text": "comment",
          "type": "comment",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 15,
                  "offset": 98,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 15,
                  "offset": 88,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 16,
              "offset": 100,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 14,
              "offset": 81,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "\`\`\`

\`\`\`scss
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 50,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 22,
                  "offset": 139,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 22,
                  "offset": 129,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 23,
              "offset": 141,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 123,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "\`\`\`

\`\`\`html
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 21,
          "offset": 123,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 29,
                  "offset": 181,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 29,
                  "offset": 171,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 30,
              "offset": 183,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 28,
              "offset": 165,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>

\`\`\`
block
\`\`\`
",
        "codeBefore": "</style>
\`\`\`

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 28,
          "offset": 165,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;
